--- a/style.css
+++ b/style.css
@@ -13,9 +13,7 @@ body {
     width: fit-content;
     color: rgb(3, 44, 64);
   }
-  button{
-    width:30%;
-  }
+  
   input, textarea, p, div, section, article, select {
     display: 'block';
     width: 100%;
@@ -25,8 +23,11 @@ body {
   }
   
   ul{
+      padding:15px;
     list-style: none;
-    
+    width:100%;
+      padding:0;
+      margin:0;
   }
   #tekst{
     font-family: 'Shadows Into Light', cursive;
@@ -34,18 +35,17 @@ body {
 
   }
   #listi{
+    width:600px;
     display:flex;
     flex-direction: row;
-    justify-content: start;
-    align-items: center;
+    justify-content: space-between;
+    align-items:center;
   }
   #check{
     margin:0;
     width:20px;
   }
-  /* #brisi{
-    width:10%;
-  } */
+  
 #app{
   background-color:rgba(176, 178,131,0.85);
   display: flex;
@@ -60,7 +60,7 @@ body {
 }
 
 .btn{
-  width: 120px;
+   width: 120px;
     height: 65px;
     outline: none;
     cursor: pointer;
@@ -73,55 +73,97 @@ body {
 }
 
 .btn:hover{
+    color:white;
   border: none;
-      color: white;
-      font-size: 22px;
-      transform:scale(1.1);
+    font-size: 22px;
+    transform:scale(1.1);
       background-color: rgb(3,44,64);;
     transition: all 0.3s ease-in-out;
 }
 
 .btn-two{
-  cursor:pointer;
+    color:rgb(3, 44, 64);
+    width:50px;
+    background-color:transparent;
+	border-radius:6px;
+	border:3px solid rgb(3, 44, 64);
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:28px;
+	font-weight:bold;
+	padding:9px 17px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
 }
 
-input[type=checkbox] + label {
-  display: block;
-  margin: 0.2em;
-  cursor: pointer;
-  padding: 0.2em;
+.btn-two:hover {
+    color:white;
+    transform:scale(1.1);
+	background-color:rgb(3, 44, 64) ;
+}
+.btn-two{
+    color:rgb(3, 44, 64);
+    width:50px;
+    background-color:transparent;
+	border-radius:6px;
+	border:3px solid rgb(3, 44, 64);
+	display:inline-block;
+	cursor:pointer;
+	color:rgb(3, 44, 64);
+	font-size:28px;
+	font-weight:bold;
+	padding:9px 17px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
 }
 
-input[type=checkbox] {
-  display: none;
+.btn-two:hover {
+    color:white;
+    transform:scale(1.1);
+	background-color:rgb(3, 44, 64) ;
+}
+.btn-two:active {
+    background-color: rgba(20, 215, 245,0.9);
+	position:relative;
+	top:1px;
 }
 
-input[type=checkbox] + label:before {
-  content: "\2714";
-  border: 0.1em solid rgb(3, 44, 64);
-  border-radius: 0.2em;
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  padding-left: 0.2em;
-  padding-bottom: 0.3em;
-  margin-right: 0.2em;
-  vertical-align: bottom;
-  color: transparent;
-  transition: .2s;
-}
 
-input[type=checkbox] + label:active:before {
-  transform: scale(0);
-}
-
-input[type=checkbox]:checked + label:before {
-  background-color: rgba(20, 215, 245,0.9);
-  border-color: rgba(20, 215, 245,0.9);
-  color: #fff;
-}
 
 input[type=text] {
   font-family: 'Shadows Into Light', cursive;
+    border-radius: 6px;
+    background-color: transparent;
+    border: 2px solid rgb(3, 44, 64);
 }
 
+form{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding:20px;
+}
+#todos{
+    color:rgb(3, 44, 64);
+    padding:15px;
+    margin:0;
+    margin:0;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.done {
+  text-decoration: line-through;
+}
+.checked{
+  transform:scale(3);
+  background-color: transparent;
+  
+border:3px solid rgb(3, 44, 64);
+  
+}
+.checked:hover{
+  transform:scale(3.5);
+}
